@@ -25,6 +25,7 @@ Application Changes:
 - When adding a new advanced lifestyle, all labels for costs and lifestyle points now update properly when changing the base lifestyle type.
 - Lifestyle qualities whose minimum is not reached by the attached lifestyle now properly contribute to that lifestyle's lifestyle points.
 - Attempting to delete an advanced lifestyle's quality no longer prompts the user to delete a complex form.
+- The built-in settings for Shadowrun Missions rules now properly enable No Future and Krime Katalog content as per the combined FAQ 1.4.
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://forums.shadowruntabletop.com/index.php?topic=31750.msg544923#msg544923.
